--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,10 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.flywaydb:flyway-core'
-	implementation 'org.flywaydb:flyway-postgresql'
+	// implementation 'org.flywaydb:flyway-core'
+	// implementation 'org.flywaydb:flyway-database-postgresql' 
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.postgresql:postgresql'
+	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
