--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 **/src/main/resources/application.properties
+**/.DS_Store
+.DS_Store
 
 ### STS ###
 .apt_generated
