--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
+	implementation 'com.google.cloud:google-cloud-vertexai:0.3.0'
+	compile 'com.google.cloud:google-cloud-aiplatform:3.35.0'
 }
 
 tasks.named('test') {
