--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 	implementation 'dev.langchain4j:langchain4j:0.33.0'
 	implementation 'dev.langchain4j:langchain4j-core:0.33.0'
 	implementation 'dev.langchain4j:langchain4j-vertex-ai:0.33.0'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
